<resources>
    <string name="app_name">vk Music</string>
    <string name="log_in">Log in</string>
    <string name="login_intro_text">Please log in to use vk Music</string>
    <string name="log_out">Log out</string>
    <string name="playlists">Playlists</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="no_track_playing">No track is currently playing</string>
    <string name="about">About</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_my_audio">Remove from my audio</string>
    <string name="my_audio">My music</string>
    <string name="now_playing">Now playing</string>
    <string name="search">Search</string>
    <string name="playback_queue">Playback queue</string>
    <string name="search_results">Search results</string>
    <string name="clear_queue">Clear queue</string>
    <string name="tracks_in_queue">%1$d tracks in queue</string>
    <string name="track_in_queue">1 track in queue</string>
    <string name="download">Download</string>
    <string name="choose_playlist">Choose playlist</string>
    <string name="start_radio">Start radio</string>
    <string name="radio">Radio</string>
    <string name="no_similar_tracks">No similar tracks found</string>
    <string name="error_loading_radio">Error loading radio</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_title">Playlist title</string>
    <string name="no_tracks_found">No tracks found</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="remove_from_your_music">Remove from your music</string>
    <string name="track_removed">Track successfully removed</string>
    <string name="error_deleting_track">Error while deleting this track</string>
    <string name="error_loading_search">Error loading search results</string>
    <string name="url_empty_avatar">https://vk.com/images/camera_100.png</string>
    <string name="deleted_playlist">Playlist successfully deleted</string>
    <string name="error_playing_track">Error playing track</string>
    <string name="track_added_to">"Track successfully added to %1$s"</string>
    <string name="popular">Popular</string>
</resources>
