<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_play"
        android:title="@string/play"/>

    <item
        android:id="@+id/action_play_next"
        android:title="@string/play_next"/>

    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/add_to_playlist"/>

    <item android:id="@+id/action_remove_from_playlist"
          android:title="@string/remove_from_playlist"
          android:visible="false"/>

    <item android:id="@+id/action_remove_from_my_audio"
          android:title="@string/remove_from_your_music"
          android:visible="true"/>

    <item
        android:id="@+id/action_track_radio"
        android:title="@string/start_radio"/>

    <item
        android:id="@+id/action_download"
        android:title="@string/download"/>

</menu>